syntax = "proto3";

package info;

service Info {
    rpc User (UserInfoRequest) returns (UserInfoReply);
    rpc Bucket (AllowedBucketReq) returns (AllowedBucketReply);
}

message UserInfoRequest {
    bytes id = 1;
}

message UserInfoReply {
    string username = 1;
    Role role = 2;
    repeated string buckets = 3;
}

enum Role {
    SUPER_US = 0;
    ADMINISTRATOR = 1;
    OPERATOR = 2;
}

enum Permissions {
    PUT = 0;
    GET = 1;
    DELETE = 2;
}

message AllowedBucketReq {
    bytes id = 1;
    string name = 2;
    Permissions permissions = 3;
}

message AllowedBucketReply {
    bool allowed = 1;
}